@@ -30,3 +30,80 @@
 /AmmoboxPlus.sln
 /AmmoboxPlus.csproj.user
 /AmmoboxPlus.csproj
+/Projectiles/RocketStarburst.png
+/Projectiles/RocketSand.png
+/Projectiles/RocketMiner.png
+/Projectiles/RocketIchor.png
+/Projectiles/RocketIce.png
+/Items/Weapons/RocketStarburst.png
+/Items/Weapons/RocketSand.png
+/Items/Weapons/RocketMiner.png
+/Items/Weapons/RocketIchor.png
+/Items/Weapons/RocketIce.png
+/Buffs/Slime.png
+/Projectiles/RocketHeart.png
+/Projectiles/RocketHarpy.png
+/Projectiles/RocketGolemfist.png
+/Projectiles/RocketFrostburn.png
+/Projectiles/RocketCursed.png
+/Projectiles/RocketChlorophyte.png
+/Items/Weapons/RocketHeart.png
+/Items/Weapons/RocketHarpy.png
+/Items/Weapons/RocketGolemfist.png
+/Items/Weapons/RocketFrostburn.png
+/Items/Weapons/RocketCursed.png
+/Items/Weapons/RocketChlorophyte.png
+/Projectiles/RocketBunny.png
+/Projectiles/RocketBlackhole.png
+/Items/Weapons/RocketBunny.png
+/Items/Weapons/RocketBlackhole.png
+/Projectiles/DartYing.png
+/Projectiles/DartYang.png
+/Projectiles/DartStarfall.png
+/Projectiles/DartSlime.png
+/Projectiles/DartSand.png
+/Projectiles/DartMarked.png
+/Items/Weapons/DartYing.png
+/Items/Weapons/DartYang.png
+/Items/Weapons/DartStarfall.png
+/Items/Weapons/DartSlime.png
+/Items/Weapons/DartSand.png
+/Items/Weapons/DartMarked.png
+/dummy.png
+/Projectiles/DartIce.png
+/Projectiles/DartFrostburn.png
+/Projectiles/DartDrugged.png
+/Projectiles/DartCactus.png
+/Projectiles/DartBunny.png
+/Projectiles/DartAcupuncture.png
+/Projectiles/BlackHole.png
+/Projectiles/ArrowTrueChloro.png
+/Projectiles/ArrowSpectral.png
+/Projectiles/ArrowSlime.png
+/Projectiles/ArrowSand.png
+/Projectiles/ArrowRubber.png
+/Projectiles/ArrowMarked.png
+/Projectiles/ArrowIce.png
+/Projectiles/ArrowDrugged.png
+/Projectiles/ArrowCactus.png
+/Projectiles/ArrowBunny.png
+/Items/Weapons/DartIce.png
+/Items/Weapons/DartFrostburn.png
+/Items/Weapons/DartDrugged.png
+/Items/Weapons/DartCactus.png
+/Items/Weapons/DartBunny.png
+/Items/Weapons/DartAcupuncture.png
+/Items/Weapons/ArrowTrueChloro.png
+/Items/Weapons/ArrowSpectral.png
+/Items/Weapons/ArrowSlime.png
+/Items/Weapons/ArrowSand.png
+/Items/Weapons/ArrowRubber.png
+/Items/Weapons/ArrowMarked.png
+/Items/Weapons/ArrowIce.png
+/Items/Weapons/ArrowDrugged.png
+/Items/Weapons/ArrowCactus.png
+/Items/Weapons/ArrowBunny.png
+/Items/AmmoBoxPlus.png
+/Items/AmmoBox.png
+/Buffs/CloudedVision.png
+/Buffs/Cactus.png
