@@ -1,6 +1,6 @@
-Arrow update is here! 10 new arrow types added!
+Rocket update is here! 13 new rocket types added!
 
-Ammobox+ is a mod that's entirely dedicated to the ranger specialization of Terraria, and adds 30 new ammo types with new effects and their own recipes to the game.
+Ammobox+ is a mod that's entirely dedicated to the ranger specialization of Terraria, and adds 43 new ammo types with new effects and their own recipes to the game.
 Currently added ammo types:
     - Rubber Bullet - has a very high knockback
     - Peculiar Bullet - has a chance to turn enemies into a Bunny
@@ -10,11 +10,15 @@ Currently added ammo types:
     - Miner Bullet - has a low chance of dropping a random amount of ore
     - Spectral Bullet - can penetrate up to 4 blocks, but the accuracy decreases substantially with each block
     - Starfall Bullet - has a low chance to turn into a star
-    - And more!
+    - And more, including new arrow, dart and rocket types!
 Please report issues on the GitHub issue tracker!
 GitHub: https://github.com/Muzuwi/AmmoboxPlus
 Terraria Forums: https://forums.terraria.org/index.php?threads/ammobox.72004/
 ---------- CHANGELOG ----------
+
+v1.3.3.0 - Rocket update! 13 new rocket types added (special effects only work with Rocket Launcher/Grenade Launcher/Snowman Cannon/Proximity Mine Launcher, Celebration is not included due to programming issues and Electrosphere Launcher is planned in the future. Celebration, Electrosphere Launcher and modded launchers can use the rockets, however they behave just like Rocket III/IV's, and have no special effects)
+	   Fix ammo dropped from ammoboxes very rarely getting prefixes
+	   Fix bullet hitboxes
 
 v1.2.2.9 - Fix possible multiplayer Ice/Slime desync
 	   Changed ice ammo recipe
